# pakm-3d

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  License-en  License-ru  License-ru.rtf  README.md  pakm-3d.sln
CSparse/: CMakeLists.txt  cs_add.c
CSparse/Test/: CMakeLists.txt  OctreeDimensions.cpp
Core/: AdjustMeshInterference.cpp  AdjustMeshInterference.h  BasicVolumes.cpp  BasicVolumes.h  CMakeLists.txt  DefaultProperties.h  Domain.cpp  Domain.h  DomainPlanes.cpp  DomainPlanes.h  Elements.cpp  Elements.h  FibreDistribution.cpp  FibreDistribution.h  FibreDistribution1DQuad.cpp  FibreDistribution1DQuad.h  FibreDistributionConst.cpp  FibreDistributionConst.h  GeometrySolver.cpp  GeometrySolver.h  Interpolation.cpp  Interpolation.h  InterpolationAdjusted.cpp  InterpolationAdjusted.h  InterpolationBezier.cpp  InterpolationBezier.h  InterpolationCubic.cpp  InterpolationCubic.h  InterpolationLinear.cpp  InterpolationLinear.h  LinearTransformation.cpp  LinearTransformation.h  Logger.cpp  Logger.h  Matrix.h  MatrixUtils.h  Mesh.cpp  Mesh.h  MeshData.h  MeshIntersectionData.cpp  (+130 more)
Core/Python/: CMakeLists.txt  Core.i  Core.py  __init__.py
Core/Python/Lib/: Abaqus.py  Ansys.py  Completer.py  FlowTex.py  GridFile.py  TexGenv2.py  WeavePattern.py  WiseTex.py  dataHandling.py  dataHandlingInPlane.py  effectiveMatPropRVE.py
Core/Python/Scripts/: 2dweave.py  LayeredTextile2.py  cotton.py
Core/Python/Tests/: AbaqusTest.py  FlowTexTest.py  GridFileTest.py  TexGenv2Test.py  WiseTexTest.py
Core/Test/: CMakeLists.txt  FibreDistribTests.cpp  GeometricTests.cpp  MesherTests.cpp  OctreeDimensions.cpp  PropertyTests.cpp  SolverTests.cpp  TestUtilities.cpp  TestUtilities.h  TextileFactory.cpp  TextileFactory.h  VoxelExportTests.cpp  XMLTests.cpp
Export/: CMakeLists.txt  Convert.cpp  Convert.hpp  Exporter.cpp  Exporter.hxx  FindOpenCascade.cmake  export.vcxproj  export.vcxproj.filters  packages.config
Export/Python/: CMakeLists.txt  Export.i  Export.py  Export_wrap.cxx
Export/Test/: CMakeLists.txt
GUI/: CMakeLists.txt  CircleRangeCtrl.h  DomainPlanesDialog.cpp  DomainPlanesDialog.h  DropTarget.cpp  Embedded.i  EmbeddedPythonFunctions.cpp  EmbeddedPythonFunctions.h  GUI.APS  GUI.rc  LayersOffsetDialog.h  LoggerGUI.h  Modeller.cpp  Modeller.h  PythonConverter.cpp  PythonWrapper.cpp  PythonWrapper.h  RangeValidator.cpp  RangeValidator.h  SectionSelect.cpp  SectionSelect.h  TexGen.xrc  TexGenApp.cpp  TexGenMainFrame.cpp  TexGenRenderWindow.cpp  TextileLayersDialog.cpp  TextileLayersDialog.h  UsewxWidgets.cmake  WeavePatternCtrl3D.h  WeaveWizard.cpp  WeaveWizard.h  WindowIDs.h  Wizard.xpm  latin_random.cpp  wxVTKRenderWindowInteractor.h
Octree/: CMakeLists.txt  Octree.hpp  OctreeAgent.hpp  OctreeAgentV.hpp  OctreeArray.hpp  OctreeBound.cpp  OctreeBound.hpp  OctreeBranch.cpp  OctreeBranch.hpp  OctreeCell.cpp  OctreeCell.hpp  OctreeData.cpp  OctreeData.hpp  OctreeDimensions.cpp  OctreeDimensions.hpp  OctreeLeaf.cpp  OctreeLeaf.hpp  OctreeRoot.cpp  OctreeRoot.hpp  OctreeVector.cpp  OctreeVector.hpp  OctreeVisitor.hpp  OctreeVisitorV.hpp
Octree/Test/: CMakeLists.txt  OctreeDimensions.cpp  OctreeVector.cpp
Renderer/: CMakeLists.txt  TexGenRenderer.cpp  TexGenRenderer.h
Renderer/Python/: CMakeLists.txt  Renderer.i  Renderer.py  Renderer_wrap.cxx
Renderer/Test/: CMakeLists.txt  OctreeDimensions.cpp  ProfileTests.cpp  TextileFactory.cpp  TextileFactory.h
Tetgen/: CMakeLists.txt  predicates.cxx  tetgen.cxx  tetgen.h
Tetgen/Test/: CMakeLists.txt  OctreeDimensions.cpp
TinyXML/: CMakeLists.txt  TiXmlAttribute.hpp  TiXmlAttributeSet.hpp  TiXmlBase.hpp  TiXmlComment.hpp  TiXmlCursor.hpp  TiXmlDeclaration.hpp  TiXmlDocument.hpp  TiXmlElement.hpp  TiXmlEncoding.hpp  TiXmlEntity.hpp  TiXmlError.hpp  TiXmlHandle.hpp  TiXmlNode.hpp  TiXmlNodeType.hpp  TiXmlPrinter.hpp  TiXmlQueryType.hpp  TiXmlText.hpp  TiXmlUnknown.hpp  TiXmlVisitor.hpp  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
TinyXML/Test/: CMakeLists.txt  TinyXMLIntegration.cpp
pakm-3d/: AngleInterlock.xpm  CircleRangeCtrl.cpp  CompleteDialog.cpp  CompleteDialog.h  ControlsWindow.cpp  ControlsWindow.h  Convert.cpp  Convert.h  ConvertString.cpp  ConvertString.h  CustomInteractorStyle.cpp  CustomInteractorStyle.h  CustomWidget.cpp  CustomWidget.h  DomainPlanesDialog.cpp  DomainPlanesDialog.h  DropTarget.cpp  DropTarget.h  Embedded.py  EmbeddedPythonFunctions.cpp  EmbeddedPythonFunctions.h  Embedded_wrap.cxx  Exporter.cpp  Exporter.h  GUI.rc  LayerToLayer.xpm  LayersOffsetDialog.cpp  LayersOffsetDialog.h  LoggerGUI.h  Modeller.cpp  Modeller.h  OffsetAngleInterlock.xpm  Orthogonal.xpm  PatternDraftDialog.cpp  PatternDraftDialog.h  PythonConsole.cpp  PythonConsole.h  PythonConverter.cpp  PythonConverter.h  PythonWrapper.cpp  (+33 more)
setup/: Product.wxs  ProductComponents.wxs  ProductShortcuts.wxs  Variables.wxi  setup.wixproj
triangulate/: triangulate.cpp  triangulate.h  triangulate.vcxproj  triangulate.vcxproj.filters  triangulateio.cpp  triangulateio.h
