#cmake_minimum_required(VERSION 3.9)
#project(Octree.Core)

#set(SOURCE_LIB
#	Octree.hpp

#	OctreeArray.hpp

#	OctreeDimensions.cpp
#	OctreeDimensions.hpp

#	OctreeAgentV.cpp
#	OctreeAgentV.hpp

#	OctreeAgent.cpp
#	OctreeAgent.hpp

#	OctreeVisitorV.cpp
#	OctreeVisitorV.hpp

#	OctreeVisitor.cpp
#	OctreeVisitor.hpp

#	OctreeBound.cpp
#	OctreeBound.hpp

#	OctreeData.cpp
#	OctreeData.hpp

#	OctreeLeaf.cpp
#	OctreeLeaf.hpp

#	OctreeRoot.cpp
#	OctreeRoot.hpp

#	OctreeCell.cpp
#	OctreeCell.hpp

#	OctreeBranch.cpp
#	OctreeBranch.hpp

#	OctreeVector.cpp
#	OctreeVector.hpp
#)

#add_library(Octree.Core STATIC
#	${SOURCE_LIB}
#)

#add_subdirectory(Test)
