cmake_minimum_required(VERSION 3.9)
project(Renderer.Core)

set(SOURCE_LIB
	CustomInteractorStyle.cpp
	CustomInteractorStyle.h

	TexGenRenderer.cpp
	TexGenRenderer.h
)

add_library(Renderer.Core STATIC
	${SOURCE_LIB}
)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
target_link_libraries(Renderer.Core ${VTK_LIBRARIES})

include_directories(../TinyXML)
include_directories(../Tetgen)
include_directories(../Core)
target_link_libraries(Renderer.Core Core.Core)

add_subdirectory(Test)
add_subdirectory(Python)

INSTALL(FILES
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkalglib-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkChartsCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonColor-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonComputationalGeometry-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonDataModel-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonExecutionModel-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonMath-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonMisc-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonSystem-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkCommonTransforms-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkDICOMParser-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkDomainsChemistry-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkEncodeString-6.3.exe
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkexoIIc-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkexpat-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersAMR-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersExtraction-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersFlowPaths-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersGeneral-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersGeneric-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersGeometry-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersHybrid-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersHyperTree-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersImaging-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersModeling-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersParallel-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersParallelImaging-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersProgrammable-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersSelection-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersSMP-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersSources-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersStatistics-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersTexture-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkFiltersVerdict-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkfreetype-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkftgl-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkGeovisCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkgl2ps-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkHashSource-6.3.exe
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkhdf5_hl-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkhdf5-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingColor-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingFourier-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingGeneral-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingHybrid-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingMath-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingMorphological-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingSources-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingStatistics-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkImagingStencil-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkInfovisCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkInfovisLayout-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkInteractionImage-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkInteractionStyle-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkInteractionWidgets-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOAMR-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOEnSight-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOExodus-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOExport-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOGeometry-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOImage-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOImport-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOInfovis-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOLegacy-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOLSDyna-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOMINC-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOMovie-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIONetCDF-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOParallel-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOParallelXML-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOPLY-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOSQL-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOVideo-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOXML-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkIOXMLParser-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkjpeg-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkjsoncpp-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtklibxml2-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkmetaio-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkNetCDF_cxx-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkNetCDF-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkoggtheora-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkParallelCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkParseOGLExt-6.3.exe
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkpng-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkproj4-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingAnnotation-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingContext2D-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingContextOpenGL-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingFreeType-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingGL2PS-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingImage-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingLabel-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingLIC-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingLOD-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingOpenGL-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingVolume-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkRenderingVolumeOpenGL-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtksys-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkTestingGenericBridge-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkTestingIOSQL-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkTestingRendering-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtktiff-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkverdict-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkViewsContext2D-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkViewsCore-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkViewsInfovis-6.3.dll
	${VTK_RUNTIME_LIBRARY_DIRS}/vtkzlib-6.3.dll
DESTINATION
	${CMAKE_INSTALL_PREFIX}
)